--- a/index.html
+++ b/index.html
@@ -8,18 +8,40 @@
     <title>Formulário IMC</title>
 </head>
 <body>
-    <div class="main-content">
-        <section class="main">
-            <a href="#">You Control</a>
-            <form>
-                <input type="number" step="0.01" min="0" placeholder="Digite sua altura">
-                <input type="number" step="0.01" min="0" placeholder="Digite seu peso">
+    <header>
+        <h1>Projeto de cálculo de IMC e Calorias, desenvolvido para a disciplina de Projeto Integrador. PUC-Campinas</h1>
+    </header>
+    <div class="box-geral">
+        <div class="main-content">
+            <section class="main">
+                <h2>Cálculo de IMC:</h2>
+                <form>
+                    <input type="number" step="0.01" min="0" placeholder="Digite sua altura">
+                    <input type="number" step="0.01" min="0" placeholder="Digite seu peso">
+                    <input class="btn" type="submit" value="Calcular IMC">
+                </form>
+            </section>
+            <section class="main-right">
+                <img src="./images/imgPeso2.jpg" alt="A imagem mostra uma maça com uma fita métrica envolvendo-a, Uma balança, Uma Garrafa de água deitada, um bowl com alface e um altere">
+            </section>
+        </div>
+
+        <div class="box-calorias">
+            <section class="calorias-content">
+                <h2>Cálculo de Calorias:</h2>
+                <section class="input">
+                    <input type="text" placeholder="Digite sua idade">
+                    <div class="radios-btns">
+                        <input type="radio" name="Homem" id="H" value="Homem">
+                        <label for="H">Homem</label>
+                        <input type="radio" name="Mulher" id="M" value="Mulher">
+                        <label for="M">Mulher</label>
+                    </div>
+                </section>
                 <input class="btn" type="submit" value="Calcular IMC">
-            </form>
-        </section>
-        <section class="main-right">
+            </section>
             <img src="./images/imgPeso2.jpg" alt="A imagem mostra uma maça com uma fita métrica envolvendo-a, Uma balança, Uma Garrafa de água deitada, um bowl com alface e um altere">
-        </section>
+        </div>
     </div>
 </body>
 </html>
